--- a/package.json
+++ b/package.json
@@ -2,13 +2,7 @@
   "name": "ecommerce-app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "server": "nodemon server/app.js"
+    "start": "node src/app.js"
   },
   "private": true,
   "dependencies": {
