--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce-app",
   "version": "0.0.0",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node server/app.js"
   },
   "private": true,
   "dependencies": {
