--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "ecommerce-app",
   "version": "0.0.0",
   "scripts": {
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "server": "nodemon server/app.js",
     "start": "node server/app.js"
   },
   "private": true,
